--- a/public/assets/scss/pages/transactions.scss
+++ b/public/assets/scss/pages/transactions.scss
@@ -24,6 +24,11 @@
 .step_no .spinner-border{
     height: 4rem;
     width: 4rem;
+    @media #{$max-sm}{
+        height: 3rem;
+        width: 3rem;
+        margin-right: 0px !important;
+    }
 }
 .step_no b {
     font-size: 16px;
@@ -32,6 +37,12 @@
     font-weight: 700;
     @media #{$max-lg}{
         font-size: 14px;
+    }
+    @media #{$max-lg}{
+        font-weight: 600;
+    }
+    @media #{$max-md}{
+        font-weight: 500;
     }
 } 
 .bone_count{
@@ -197,9 +208,20 @@
 .pag_con{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     .left_block {
         display: flex;
         align-items: center;
+        @media #{$max-sm}{
+            width: 100%;
+            margin-bottom: 15px;
+        }
+    }
+    .right_block{
+        @media #{$max-sm}{
+            width: 100%;
+            margin-bottom: 15px;
+        }
     }
     .page-link, .page-link:focus{
         background-color: transparent;
@@ -212,6 +234,13 @@
     @media #{$max-sm}{
         div{
             margin: 10px 0;
+        }
+    }
+}
+.cmn_data{
+    img{
+        @media #{$max-sm}{
+            max-width: 32px;
         }
     }
 }
