added popup responsive

--- a/public/assets/scss/pages/_swap-token.scss
+++ b/public/assets/scss/pages/_swap-token.scss
@@ -118,4 +118,8 @@
 .tokn-popup  .spinner-border {
     height: 8rem;
     width: 8rem;
+    @media #{$max-xxl}{
+        height: 5rem;
+        width: 5rem;
+    }
 }
