--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -176,9 +176,9 @@
             width: 250px;
             font-size: 14px;
         }
-        @media #{$max-xsm}{
-            left: -100%;
-        }
+        // @media #{$max-xsm}{
+        //     left: -100%;
+        // }
         
     }
     a{
