--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -9,6 +9,9 @@
     &.sticky-header{
         background: $body-bg;
     }
+    .navbar-toggler:focus {
+        box-shadow:none;
+    }
     .navbar-brand {
         padding-top: 8px;
         padding-bottom: 8px;
@@ -41,6 +44,13 @@
         margin-right: 12px;
         &:last-child{
             margin-right: 0;
+            @media #{$max-md}{
+                margin-bottom: 0;
+            }
+        }
+        @media #{$max-md}{
+            margin-bottom: 15px;
+            margin-right: 0;
         }
     }
     .bg-dark-1000{
@@ -57,6 +67,9 @@
         button{
             background-color: $primary !important;
             height: auto;
+            @media #{$max-md}{
+                width: 100%;
+            }
         }
     }
     .dot-icon{
@@ -76,6 +89,9 @@
             padding-left: 0;
             padding-right: 0;
         }
+    }
+    .navbar-nav .dropdown-menu {
+        position: absolute;
     }
 }
 .staking-header{
