changes updated in header

--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -48,7 +48,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans' !important;
     line-height: 1.2;
 }
-
+b{
+    font-weight: 600;
+    @media #{$max-lg}{
+        font-weight: 500;
+    }
+}
 h1 {
     font-size: 48px;
     @media #{$max-xxl}{
