--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -54,7 +54,7 @@
             font-style: normal;
             font-weight: 700;
             margin-bottom: 15px;
-            @media #{$max-lg}{
+            @media #{$max-xxl}{
                 font-weight: 600;
             }
         }
