--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -71,6 +71,19 @@
                 width: 100%;
             }
         }
+        .bg-dark-1000 {
+            border-radius: 10px;
+            font-weight: 500;
+            font-size: 18px;
+            padding: 13px 22px !important;
+            @media #{$max-xxl}{
+                padding: 12px 20px !important;
+                font-size: 16px;
+            }
+            @media #{$max-xl}{
+                font-size: 14px;
+            }
+        }
     }
     .dot-icon{
         max-width: 30px;
