added qr code popup

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -757,8 +757,31 @@
   }
   
   /** Validator account page responsive end **/
-
-  /** Transaction page responsive **/
-  
-  /** Transaction page responsive **/
- 
+/** qr model start **/
+ .qr-wrap{
+    text-align: center;
+    svg{
+        display: inline-block;
+    }
+    .word-wrap{
+        word-break: break-word;
+    }
+ }
+ .qr-wrap{
+    background: $body-bg-800;
+    padding: 25px 15px 45px 15px;
+    border-radius: 10px;
+    margin-top: 15px;
+    @media #{$max-xxl}{
+        padding: 25px 15px 15px 15px;
+        margin-top: 0;
+    }
+ }
+ .footer-sec{
+    border-top: 0;
+    padding: 10px 0 0;
+    .btn{
+        display: block;
+    }
+ }
+/** qr model end **/
