--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -781,7 +781,10 @@
     border-top: 0;
     padding: 10px 0 0;
     .btn{
-        display: block;
+        .flex{
+            display: block;
+        }
+        
     }
  }
 /** qr model end **/
