--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -165,7 +165,7 @@
 .exchng_msg_box{
     margin-top: 20px;
     background-color: $body-bg;
-    padding: 16px;
+    padding: 10px 16px 16px 16px;
     text-align: center;
     border-radius: 10px;
     .sprdt_txt{
@@ -174,11 +174,15 @@
         border-radius: 10px;
         font-weight: 600;
         display:inline-block;   
-        margin-top: 10px;
+        margin-top: 2px;
     }
 }
 .alert_msg{
     margin: 20px;
+    img{
+        max-width: 16px;
+        display: inline-block;
+    }
 }
 .pop_btm_txt{
     margin: 30px 0;
@@ -221,6 +225,19 @@
     input[type="checkbox"]{
         border: 1px solid #F28B03;
         background-color: transparent;
+    }
+    .form-check {
+        padding-left: 26px;
+        position: relative;
+    }
+    input {
+        padding: 10px;
+        width: 10px;
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        left: 30px;
+        padding: 7px !important;
     }
 }
 .add_detail p{
