added validator details page

--- a/public/assets/scss/core/core.scss
+++ b/public/assets/scss/core/core.scss
@@ -11,5 +11,6 @@
 @import '../../scss/core/withdraw';
 @import '../../scss/core/swap-token';
 @import '../../scss/core/how-it-works';
-// @import '../../scss/core/delegator-validator';
+@import '../../scss/pages/validator-details';
+@import '../../scss/core/delegator-validator';
 
