--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -895,12 +895,12 @@
 
 .error-msg {
     position: absolute;
-    top: -22px;
+    bottom: -22px;
     left: 0;
     z-index: 1;
     label {
         font-size: 12px;
         font-weight: 600;
-        color: $primary
+        color: $primary;
     }
 }
