--- a/public/assets/scss/core/faucet.scss
+++ b/public/assets/scss/core/faucet.scss
@@ -1,9 +1,9 @@
 .faucet-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 76px);
-    margin-top: 76px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // height: calc(100vh - 76px);
+    // margin-top: 76px;
 }
 .black-sel{
     .form-select{
@@ -18,6 +18,36 @@
 }
 
 .form-section {
-    max-width: 650px;
+    // max-width: 650px;
     margin: 0 auto;
+}
+.faucet-form .mid-chain {
+    padding: 0;
+    .orange-btn {
+        background: #f07501;
+        padding:2px 8px;
+        font-size: 14px;
+        position: absolute;
+        right: 0px;
+        border-radius: 10px;
+        line-height: normal;
+        @media #{$max-sm }{
+            font-size: 12px;
+        }
+    }
+    input[type="text"]{
+        padding-right: 65px;
+    }
+}
+.faucet-form {
+    .cus-sel select {
+        border: 0;
+        background: #0c0f17;
+        color:#E9E9EC;
+        padding: 0;
+    }
+    .arrow-down{
+        right: 0;
+        top: 5px;
+    }
 }
