--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -207,7 +207,7 @@
     h6{
         font-weight: 700;
         margin: 5px 0;
-        margin-top: 20px;
+        margin-top: 6px;
     }
 }
 .add_detail {
@@ -218,7 +218,7 @@
 }
 .cnfrm_check_box {
     color: $body-text;
-    padding: 15px 0;
+    padding:15px 0 24px;
     a{
         color:$primary;
     }
