--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -895,8 +895,8 @@
 
 .error-msg {
     position: absolute;
-    bottom: -18px;
-    left: 0;
+    bottom: -22px;
+    left: 10px;
     z-index: 1;
     label {
         font-size: 12px;
