--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -272,22 +272,22 @@ ul {
 }
 .primary-btn{
     background:$primary-gradient;
-    color:rgba($white, 0.89);
+    color:rgba($white, 0.89) !important;
     font-weight: 600;
     // border: 1px solid rgba(255, 255, 255, 0.4);
     &:hover{
         background:$primary-gradient;
-        color:rgba($white, 0.89);
+        color:rgba($white, 0.89) !important;
     }
 }
 
 .secondary-btn{
     background:$secondary;
-    color: rgba($white, 0.89);
+    color: rgba($white, 0.89) !important;
     // border: 1px solid rgba(255, 255, 255, 0.4);
     &:hover{
         background:$secondary !important;
-        color: rgba($white, 0.89);
+        color: rgba($white, 0.89) !important;
     }
 }
 .primary-gradient-text {
@@ -301,13 +301,13 @@ ul {
     background-color:$grey-color;
     border-radius: 10px;
     font-weight: 600;
-    color:rgba($white, 0.89);
+    color:rgba($white, 0.89) !important;
     @media #{$max-xxl}{
         font-size: 14px;
     }
     &:hover{
         background:$primary-gradient;
-        color:rgba($white, 0.89);
+        color:rgba($white, 0.89) !important;
     }
 }
 
@@ -315,21 +315,21 @@ ul {
     background-color:$grey-color-800;
     border-radius: 10px;
     font-weight: 600;
-    color:$grey-color;
+    color:$grey-color !important;
     @media #{$max-xxl}{
         font-size: 14px;
     }
     &:hover{
         background:$primary-gradient;
-        color:$grey-color;
+        color:$grey-color !important;
     }
 }
 .black-btn{
     background-color: $body-bg-800;
-    color: rgba($white, 0.89);
+    color: rgba($white, 0.89) !important;
     &:hover{
         background:$primary-gradient;
-        color:rgba($white, 0.89);
+        color:rgba($white, 0.89) !important;
     }
 }
 
@@ -338,10 +338,10 @@ ul {
     border-radius: 10px;
     // font-size: 16px;
     font-weight: 600;
-    color:$white;
+    color:$white !important;
     &:hover{
         background:$primary-gradient;
-        color:rgba($white, 0.89);
+        color:rgba($white, 0.89) !important;
     }
 }
 
@@ -418,14 +418,14 @@ ul {
         color:$white;
       }
       .form-group{
-        margin-bottom: 20px;
+        margin-bottom: 28px;
         label{
             margin-bottom: 15px;
         }
         .inpt_fld_hlpr_txt{
             display: flex;
             justify-content: space-between;
-            margin-top: 10px;
+            margin-top: 16px;
         }
       }
 }
