--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -243,7 +243,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 25px 0;
+    margin: 35px 0;
+    @media #{$max-xxl}{
+        margin: 30px 0;
+    }
+    @media #{$max-xl}{
+        margin: 25px 0;
+    }
+    @media #{$max-lg}{
+        margin: 20px 0;
+    }
 }
 .box-block{
     cursor: pointer;
