--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -243,7 +243,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 35px 0;
+    margin: 32px 0 20px;
     @media #{$max-xxl}{
         margin: 30px 0;
     }
@@ -267,7 +267,7 @@
     min-height: 250px;
 }
 .text-section {
-    margin-bottom: 15px;
+    margin-bottom: 16px;
     .pop-hd-md{
         margin-bottom: 5px;
     }
@@ -331,6 +331,11 @@
           
     }
 }
+.complete-modal{
+    .pop-hd-md{
+        margin-bottom: 16px;
+    }
+}
 .pop-spiner{
     vertical-align: middle;
     margin-right: 10px;
@@ -373,7 +378,7 @@
     }
 }
 .sec-search {
-    margin: 10px 0 30px;
+    margin: 10px 0 32px;
 }
 
 .info-grid {
@@ -392,7 +397,7 @@
 // }
 .token-listwrap {
     position: relative;
-    margin-top: 20px;
+    margin-top: 16px;
     max-height: 355px;
     overflow-y: auto;
     @media #{$max-xxl}{
@@ -462,7 +467,7 @@
     bottom: auto;
 }
 .tokn-row {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 .pop-btns-grid{
     display: flex;
@@ -484,7 +489,7 @@
 .black-bg-sec{
     background: $body-bg-800;
     padding: 5px;
-    margin-bottom: 15px;
+    margin-bottom: 24px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -o-border-radius: 10px;
@@ -502,7 +507,10 @@
 .sec-search.sec-search-secondry {
     margin-bottom: 15px;
     border-bottom: 1px solid $lite-grey-secondry;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
+    @media #{$max-sm}{
+        padding-bottom: 15px;
+    }
 }
 .pop-mid{
     display: flex;
