--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -277,6 +277,7 @@ ul {
     // border: 1px solid rgba(255, 255, 255, 0.4);
     &:hover{
         background:$primary-gradient;
+        opacity: 0.8;
         color:rgba($white, 0.89) !important;
     }
 }
@@ -288,6 +289,7 @@ ul {
     &:hover{
         background:$secondary !important;
         color: rgba($white, 0.89) !important;
+        opacity: 0.8;
     }
 }
 .primary-gradient-text {
@@ -308,6 +310,7 @@ ul {
     &:hover{
         background:$primary-gradient;
         color:rgba($white, 0.89) !important;
+        opacity: 0.8;
     }
 }
 
@@ -322,6 +325,7 @@ ul {
     &:hover{
         background:$primary-gradient;
         color:$grey-color !important;
+        opacity: 0.8;
     }
 }
 .black-btn{
@@ -330,6 +334,7 @@ ul {
     &:hover{
         background:$primary-gradient;
         color:rgba($white, 0.89) !important;
+        opacity: 0.8;
     }
 }
 
@@ -342,6 +347,7 @@ ul {
     &:hover{
         background:$primary-gradient;
         color:rgba($white, 0.89) !important;
+        opacity: 0.8;
     }
 }
 
@@ -523,6 +529,7 @@ ul {
                 &:hover{
                     box-shadow: none;
                     border: 0;
+                    opacity: 0.8;
                 }
                 &:focus{
                     box-shadow: none;
