--- a/public/assets/scss/core/swap-token.scss
+++ b/public/assets/scss/core/swap-token.scss
@@ -26,3 +26,10 @@
         }
     }
 }
+.down_arrow{
+    text-align: center;
+    img{
+        margin: 0 auto;
+        margin-top: 20px;
+    }
+}
