--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -175,7 +175,17 @@
     bottom: auto;
 }
 .mid-chain {
-    padding: 0 23% 0 25px;
+    padding: 0 30% 0 25px;
+    @media #{$max-xxxl}{
+        padding: 0 40% 0 25px;
+    }
+    @media #{$max-xxl}{
+        padding: 0 50% 0 25px;
+    
+    }
+    @media #{$max-xsmm}{
+        padding: 0 55% 0 25px;
+    }
 }
 
 .mid-chain{
