changes updated in poups

--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -491,7 +491,7 @@ ul {
     }
     .modal-content{
         // background-color: $body-bg-800;
-        background-color:$body-bg-800;
+        background-color:$body-bg;
         border-radius: 40px;
         padding: 32px 20px;
         @media #{$max-xxl}{
