--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -92,6 +92,9 @@
 .pb-32{
     padding-bottom: 32px;
 }
+.ng-16{
+    margin-top: -16px !important;
+}
 // common space closed
 
 // form scss start
