--- a/public/assets/scss/pages/_home.scss
+++ b/public/assets/scss/pages/_home.scss
@@ -263,7 +263,8 @@
         .check-icon {
             position: absolute;
             left: 0;
-            top: -3px;
+            top: 50%;
+            transform: translateY(-50%);
         }
     }
     .shib-img{
