new static pages

--- a/public/assets/scss/pages/validator.scss
+++ b/public/assets/scss/pages/validator.scss
@@ -31,6 +31,8 @@
     }
     .btns_sec{
         margin-top: 50px;
+        display: flex;
+        justify-content: center;
         @media #{$max-xxl}{
             margin-top: 30px;
         }
