--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1010,6 +1010,11 @@
         }
     }
 }
+.sm-btn {
+    padding: 5px 10px;
+    border-radius: 4px;
+    font-size: 14px;
+}
 .tokn-popup.no-ht.trans-mod{
     .pop-bottom{
         padding-top: 15px;
